# AEFM

./: .gitignore  README.md  pyproject.toml
analysis/: convert_t1x_h5_to_ase.py
scripts/: convert_t1x_h5_to_ase.py  convert_t1x_h5_to_xyz.py  convert_xyz_to_ase.py  convert_xyz_to_ase_db.py  get_sp_energy_db.py  hyperoptimization.py  sample_jacobian_analysis.py
src/aefm/: __init__.py  callbacks.py  cli.py  noise_schedules.py  properties.py  sampler.py  task.py
src/aefm/configs/: sample.yaml  train.yaml
src/aefm/configs/callbacks/: checkpoint.yaml  earlystopping.yaml  sampling.yaml
src/aefm/configs/data/: gdb7.yaml  t1x.yaml
src/aefm/configs/experiment/: aefm.yaml  aefm_conditioned.yaml  aefm_equiformer.yaml  aefm_equiformer_hyperopt.yaml  aefm_hyperopt.yaml  birkholz.yaml  birkholz_equiformer.yaml  cats_equiformer.yaml  reactot.yaml  reactot_conditioned.yaml  reactot_equiformer.yaml  reactot_xtb.yaml  reactot_xtb_conditioned.yaml  sample_equiformer.yaml  sella_si.yaml  sella_si_equiformer.yaml  xtb_ci_neb.yaml  xtb_ci_neb_conditioned.yaml  xtb_ci_neb_equiformer.yaml
src/aefm/configs/logger/: tensorboard.yaml  wandb.yaml
src/aefm/configs/model/: nnp.yaml
src/aefm/configs/sampler/: cfm.yaml  ddpm.yaml  fixedpoint.yaml
src/aefm/configs/task/: default_task.yaml  generative_task.yaml
src/aefm/configs/task/scheduler/: no_scheduler.yaml  reduce_on_plateau.yaml
src/aefm/configs/trainer/: default_trainer.yaml
src/aefm/data/: __init__.py  atoms.py  loader.py  stats.py
src/aefm/datasets/: __init__.py  gdb7.py  t1x.py
src/aefm/interfaces/: ase_interface.py
src/aefm/model/: __init__.py  base.py  heads.py
src/aefm/optimization/: losses.py  metrics.py
src/aefm/processes/: __init__.py  base.py  functional.py  gaussian.py
src/aefm/representation/: __init__.py  combined.py  core.py  leftnet.py  object_aware.py  painn.py
src/aefm/representation/equiformer_v2/: equiformer_v2.py  equiformer_v2_denoising.py
src/aefm/sampling/: __init__.py  base.py  fixedpoint_solvers.py  generative.py
src/aefm/transform/: __init__.py  atomistic.py  distances.py  generative.py  hessian.py  neighborlist.py  reaction.py
src/aefm/utils/: __init__.py  analysis.py  general.py  script.py
src/scripts/: aefm_sample  aefm_train
